noinst_LTLIBRARIES = libfrozen_data_fixed.la
libfrozen_data_fixed_la_SOURCES = allocator_fixed_t.c
libfrozen_data_fixed_la_CFLAGS = -DDATA_TYPE_SOURCE -I@top_srcdir@/src/libfrozen/core/ -I@top_srcdir@/src/libfrozen/data/
headers_mydirdir=$(headersdir)/allocator/fixed/
headers_mydir_HEADERS=allocator_fixed_t.h
