noinst_LTLIBRARIES = libfrozen_data_list.la
libfrozen_data_list_la_SOURCES = allocator_list_t.c
libfrozen_data_list_la_CFLAGS = -DDATA_TYPE_SOURCE -I@top_srcdir@/src/libfrozen/core/ -I@top_srcdir@/src/libfrozen/data/
headers_mydirdir=$(headersdir)/allocator/list/
headers_mydir_HEADERS=allocator_list_t.h
