noinst_LTLIBRARIES = libfrozen_data_anything.la
libfrozen_data_anything_la_SOURCES = anything_t.c
headers_mydirdir=$(headersdir)/core/anything/
headers_mydir_HEADERS=anything_t.h
libfrozen_data_anything_la_CFLAGS = -DDATA_TYPE_SOURCE -I@top_srcdir@/src/libfrozen/core/ -I@top_srcdir@/src/libfrozen/data/
