noinst_LTLIBRARIES                     = libfrozen_data_backend.la
libfrozen_data_backend_la_SOURCES      = backend_t.c
headers_mydirdir=$(headersdir)/core/backend/
headers_mydir_HEADERS=backend_t.h
libfrozen_data_backend_la_CFLAGS       = -DDATA_TYPE_SOURCE -I@top_srcdir@/src/libfrozen/core/ -I@top_srcdir@/src/libfrozen/data/
