noinst_LTLIBRARIES                     = libfrozen_data_fastcall.la
libfrozen_data_fastcall_la_SOURCES      = fastcall_t.c
headers_mydirdir=$(headersdir)/core/fastcall/
headers_mydir_HEADERS=fastcall_t.h
libfrozen_data_fastcall_la_CFLAGS       = -DDATA_TYPE_SOURCE -I@top_srcdir@/src/libfrozen/core/ -I@top_srcdir@/src/libfrozen/data/
