noinst_LTLIBRARIES                     = libfrozen_data_machine.la
libfrozen_data_machine_la_SOURCES      = machine_t.c
headers_mydirdir=$(headersdir)/core/machine/
headers_mydir_HEADERS=machine_t.h
libfrozen_data_machine_la_CFLAGS       = -DDATA_TYPE_SOURCE -I@top_srcdir@/src/libfrozen/core/ -I@top_srcdir@/src/libfrozen/data/
