noinst_LTLIBRARIES = libfrozen_data_action.la
libfrozen_data_action_la_SOURCES = action_t.c
headers_mydirdir=$(headersdir)/enum/action/
headers_mydir_HEADERS=action_t.h action.h
libfrozen_data_action_la_CFLAGS = -DDATA_TYPE_SOURCE -I@top_srcdir@/src/libfrozen/core/ -I@top_srcdir@/src/libfrozen/data/
