noinst_LTLIBRARIES = libfrozen_data_datatype.la
libfrozen_data_datatype_la_SOURCES = datatype_t.c
headers_mydirdir=$(headersdir)/enum/datatype/
headers_mydir_HEADERS=datatype_t.h datatype.h
libfrozen_data_datatype_la_CFLAGS = -DDATA_TYPE_SOURCE -I@top_srcdir@/src/libfrozen/core/ -I@top_srcdir@/src/libfrozen/data/
