noinst_LTLIBRARIES = libfrozen_data_format.la
libfrozen_data_format_la_SOURCES = format_t.c
headers_mydirdir=$(headersdir)/enum/format/
headers_mydir_HEADERS=format_t.h format.h
libfrozen_data_format_la_CFLAGS = -DDATA_TYPE_SOURCE -I@top_srcdir@/src/libfrozen/core/ -I@top_srcdir@/src/libfrozen/data/
