noinst_LTLIBRARIES = libfrozen_data_hashkey.la
libfrozen_data_hashkey_la_SOURCES = hashkey_t.c
headers_mydirdir=$(headersdir)/enum/hashkey/
headers_mydir_HEADERS=hashkey_t.h hashkeys.h
libfrozen_data_hashkey_la_CFLAGS = -DDATA_TYPE_SOURCE -I@top_srcdir@/src/libfrozen/core/ -I@top_srcdir@/src/libfrozen/data/
