noinst_LTLIBRARIES = libfrozen_data_binstring.la
libfrozen_data_binstring_la_SOURCES = binstring_t.c
headers_mydirdir=$(headersdir)/format/binstring/
headers_mydir_HEADERS=binstring_t.h
libfrozen_data_binstring_la_CFLAGS = -DDATA_TYPE_SOURCE -I@top_srcdir@/src/libfrozen/core/ -I@top_srcdir@/src/libfrozen/data/
